test/e2e/testdata/listenerset-client-traffic-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: listenerset-ctp
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: ListenerSet
    name: listener-set-http
  tls:
    minVersion: "1.3"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: listenerset-ctp-httpsroute
  namespace: gateway-conformance-infra
spec:
  hostnames:
  - www.example.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: ListenerSet
    namespace: gateway-conformance-infra
    name: listener-set-http
    sectionName: extra-https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /listenerset-ctp
    backendRefs:
    - name: infra-backend-v1
      port: 8080
